--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^8.5.1",
     "loadash": "^1.0.0",
     "mongoose": "^6.1.7",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
